--- a/app/src/main/res/layout/item_main_artist.xml
+++ b/app/src/main/res/layout/item_main_artist.xml
@@ -8,18 +8,19 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageArtist"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/item_artist_image_height"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:layout_width="wrap_content"
-        android:layout_height="150dp"
-        tools:src="@tools:sample/avatars"/>
+        tools:src="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/artistNameTextTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textSize="14sp"
-        tools:text="Name"/>
+        android:textSize="@dimen/item_artist_name"
+        android:textStyle="bold"
+        tools:text="Name" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
