--- a/app/src/main/res/layout/item_main_search_result.xml
+++ b/app/src/main/res/layout/item_main_search_result.xml
@@ -8,23 +8,25 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/posterTitle"
-        android:adjustViewBounds="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:src="@tools:sample/avatars"/>
+        android:adjustViewBounds="true"
+        tools:src="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/artistNameTextTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
-        tools:text="Name"/>
+        android:textAlignment="center"
+        tools:text="Name" />
 
     <TextView
         android:id="@+id/lyricsTitleTextTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        tools:text="Lyrics title"/>
+        android:textAlignment="center"
+        android:textSize="@dimen/item_search_lyrics_text_size"
+        android:textStyle="bold"
+        tools:text="Lyrics title" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
