change item layouts

--- a/app/src/main/res/layout/item_main_search_result.xml
+++ b/app/src/main/res/layout/item_main_search_result.xml
@@ -1,32 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    tools:context=".presentation.MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardUseCompatPadding="true">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/posterTitle"
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        tools:src="@tools:sample/avatars" />
+        android:orientation="vertical"
+        tools:context=".presentation.MainActivity">
 
-    <TextView
-        android:id="@+id/artistNameTextTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        tools:text="Name" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/posterTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            tools:src="@tools:sample/avatars" />
 
-    <TextView
-        android:id="@+id/lyricsTitleTextTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:textSize="@dimen/item_search_lyrics_text_size"
-        android:textStyle="bold"
-        tools:text="Lyrics title" />
+        <TextView
+            android:id="@+id/artistNameTextTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            tools:text="Name" />
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+        <TextView
+            android:id="@+id/lyricsTitleTextTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="@dimen/item_search_lyrics_text_size"
+            android:textStyle="bold"
+            tools:text="Lyrics title" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+</androidx.cardview.widget.CardView>
