--- a/app/src/main/res/layout/item_main_artist.xml
+++ b/app/src/main/res/layout/item_main_artist.xml
@@ -4,6 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:padding="@dimen/padding_4dp"
     tools:context=".presentation.MainActivity">
 
     <androidx.appcompat.widget.AppCompatImageView
