--- a/app/src/main/res/values-night/dimens.xml
+++ b/app/src/main/res/values-night/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="item_artist_name">14sp</dimen>
     <dimen name="item_artist_image_height">120dp</dimen>
     <dimen name="item_search_lyrics_text_size">16sp</dimen>
+    <dimen name="padding_4dp">4dp</dimen>
 </resources>
