--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,7 @@
     <dimen name="item_artist_image_height">120dp</dimen>
     <dimen name="item_search_lyrics_text_size">16sp</dimen>
     <dimen name="padding_4dp">4dp</dimen>
+    <dimen name="margin_8dp">8dp</dimen>
+    <dimen name="item_album_title">12sp</dimen>
+    <dimen name="item_album_year">12sp</dimen>
 </resources>
