--- a/app/src/main/res/layout/fragment_artist_info.xml
+++ b/app/src/main/res/layout/fragment_artist_info.xml
@@ -12,9 +12,9 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/artistBackgroundPosterImageView"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="@dimen/background_image_height"
             android:adjustViewBounds="true"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
