--- a/app/src/main/res/values-night/dimens.xml
+++ b/app/src/main/res/values-night/dimens.xml
@@ -13,4 +13,8 @@
     <dimen name="background_image_height">150dp</dimen>
     <dimen name="margin_4dp">4dp</dimen>
     <dimen name="item_album_track">14sp</dimen>
+    <dimen name="songs_lyrics_text_size">16sp</dimen>
+    <dimen name="song_title_text_sie">18sp</dimen>
+    <dimen name="artist_name_text_size">16sp</dimen>
+    <dimen name="background_lyrics_height">250dp</dimen>
 </resources>
