--- a/app/src/main/res/layout/fragment_lyric.xml
+++ b/app/src/main/res/layout/fragment_lyric.xml
@@ -59,6 +59,18 @@
             tools:text="Artist Name"/>
 
         <TextView
+            android:id="@+id/albumTitleTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:padding="@dimen/padding_4dp"
+            android:layout_margin="@dimen/margin_8dp"
+            app:layout_constraintStart_toEndOf="@+id/albumCoverForLyricsImageView"
+            app:layout_constraintTop_toBottomOf="@+id/artistNameTextView"
+            android:text="Album Name"
+            tools:text="Album Name"/>
+
+        <TextView
             android:id="@+id/releaseDateTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -68,7 +80,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/albumCoverForLyricsImageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/albumCoverForLyricsImageView"
-            app:layout_constraintTop_toBottomOf="@+id/artistNameTextView"
+            app:layout_constraintTop_toBottomOf="@+id/albumTitleTextView"
             tools:text="20-03-2021" />
 
         <TextView
