--- a/app/src/main/res/layout/fragment_lyric.xml
+++ b/app/src/main/res/layout/fragment_lyric.xml
@@ -16,7 +16,6 @@
             android:layout_height="@dimen/background_lyrics_height"
             android:background="@color/teal_200"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,6 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_8dp"
+            android:scaleType="fitXY"
             android:src="@drawable/ic_launcher_foreground"
             app:layout_constraintBottom_toBottomOf="@+id/backgroundColorImageView"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,6 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_8dp"
             android:padding="@dimen/padding_4dp"
-            android:text="SONG TITLE"
             android:textSize="@dimen/song_title_text_sie"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -51,36 +50,53 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             android:padding="@dimen/padding_4dp"
-            android:layout_margin="@dimen/margin_8dp"
+            android:layout_marginStart="@dimen/margin_8dp"
             android:textSize="@dimen/artist_name_text_size"
             app:layout_constraintStart_toEndOf="@+id/albumCoverForLyricsImageView"
             app:layout_constraintTop_toBottomOf="@+id/songTitleTextView"
-            android:text="Artist Name"
             tools:text="Artist Name"/>
+
+        <TextView
+            android:id="@+id/albumTitleLabelTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_8dp"
+            android:padding="@dimen/padding_4dp"
+            android:text="@string/album_title_label"
+            app:layout_constraintStart_toEndOf="@+id/albumCoverForLyricsImageView"
+            app:layout_constraintTop_toBottomOf="@+id/artistNameTextView" />
 
         <TextView
             android:id="@+id/albumTitleTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:padding="@dimen/padding_4dp"
             android:layout_margin="@dimen/margin_8dp"
+            android:padding="@dimen/padding_4dp"
+            app:layout_constraintBottom_toBottomOf="@+id/albumTitleLabelTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/albumTitleLabelTextView"
+            app:layout_constraintTop_toTopOf="@+id/albumTitleLabelTextView"
+            tools:text="Album Name" />
+
+        <TextView
+            android:id="@+id/releaseDateLabelTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_8dp"
+            android:padding="@dimen/padding_4dp"
+            android:text="@string/release_date_label"
             app:layout_constraintStart_toEndOf="@+id/albumCoverForLyricsImageView"
-            app:layout_constraintTop_toBottomOf="@+id/artistNameTextView"
-            android:text="Album Name"
-            tools:text="Album Name"/>
+            app:layout_constraintTop_toBottomOf="@+id/albumTitleTextView" />
 
         <TextView
             android:id="@+id/releaseDateTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_8dp"
+            android:layout_marginStart="@dimen/margin_8dp"
             android:padding="@dimen/padding_4dp"
-            android:text="20-03-2021"
-            app:layout_constraintBottom_toBottomOf="@+id/albumCoverForLyricsImageView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/albumCoverForLyricsImageView"
-            app:layout_constraintTop_toBottomOf="@+id/albumTitleTextView"
+            app:layout_constraintStart_toStartOf="@+id/releaseDateLabelTextView"
+            app:layout_constraintTop_toBottomOf="@+id/releaseDateLabelTextView"
             tools:text="20-03-2021" />
 
         <TextView
