--- a/app/src/main/res/layout/fragment_lyric.xml
+++ b/app/src/main/res/layout/fragment_lyric.xml
@@ -14,7 +14,7 @@
             android:id="@+id/backgroundColorImageView"
             android:layout_width="match_parent"
             android:layout_height="@dimen/background_lyrics_height"
-            android:background="@color/teal_200"
+            android:background="#B5F44336"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
