--- a/app/src/main/res/layout/fragment_lyric.xml
+++ b/app/src/main/res/layout/fragment_lyric.xml
@@ -29,40 +29,44 @@
             app:layout_constraintBottom_toBottomOf="@+id/backgroundColorImageView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/avatars"/>
+            tools:src="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/songTitleTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_8dp"
+            android:layout_marginTop="8dp"
             android:padding="@dimen/padding_4dp"
             android:textSize="@dimen/song_title_text_sie"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/albumCoverForLyricsImageView"
-            app:layout_constraintTop_toTopOf="@+id/albumCoverForLyricsImageView"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="SONG TITLE" />
 
         <TextView
             android:id="@+id/artistNameTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:padding="@dimen/padding_4dp"
             android:layout_marginStart="@dimen/margin_8dp"
+            android:padding="@dimen/padding_4dp"
+            android:layout_marginBottom="@dimen/margin_8dp"
             android:textSize="@dimen/artist_name_text_size"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/albumCoverForLyricsImageView"
             app:layout_constraintTop_toBottomOf="@+id/songTitleTextView"
-            tools:text="Artist Name"/>
+            tools:text="Artist Name" />
 
         <TextView
             android:id="@+id/albumTitleLabelTextView"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_8dp"
+            android:layout_marginStart="@dimen/margin_8dp"
+            android:layout_marginTop="@dimen/margin_16dp"
             android:padding="@dimen/padding_4dp"
             android:text="@string/album_title_label"
+            android:textSize="@dimen/album_text_size"
             app:layout_constraintStart_toEndOf="@+id/albumCoverForLyricsImageView"
             app:layout_constraintTop_toBottomOf="@+id/artistNameTextView" />
 
@@ -71,7 +75,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_8dp"
-            android:padding="@dimen/padding_4dp"
+            android:padding="@dimen/padding_8dp"
+            android:textSize="@dimen/album_text_size"
             app:layout_constraintBottom_toBottomOf="@+id/albumTitleLabelTextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/albumTitleLabelTextView"
@@ -85,6 +90,7 @@
             android:layout_margin="@dimen/margin_8dp"
             android:padding="@dimen/padding_4dp"
             android:text="@string/release_date_label"
+            android:textSize="@dimen/release_date_text_size"
             app:layout_constraintStart_toEndOf="@+id/albumCoverForLyricsImageView"
             app:layout_constraintTop_toBottomOf="@+id/albumTitleTextView" />
 
@@ -92,21 +98,22 @@
             android:id="@+id/releaseDateTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_8dp"
             android:padding="@dimen/padding_4dp"
+            android:textSize="@dimen/release_date_text_size"
+            app:layout_constraintBottom_toBottomOf="@+id/releaseDateLabelTextView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/releaseDateLabelTextView"
-            app:layout_constraintTop_toBottomOf="@+id/releaseDateLabelTextView"
+            app:layout_constraintStart_toEndOf="@+id/releaseDateLabelTextView"
+            app:layout_constraintTop_toTopOf="@+id/releaseDateLabelTextView"
             tools:text="20-03-2021" />
 
         <TextView
             android:id="@+id/lyricTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_8dp"
             android:padding="@dimen/margin_4dp"
             android:textAlignment="center"
             android:textSize="@dimen/songs_lyrics_text_size"
-            android:layout_margin="@dimen/margin_8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
