--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,7 @@
     <dimen name="song_title_text_sie">18sp</dimen>
     <dimen name="artist_name_text_size">16sp</dimen>
     <dimen name="background_lyrics_height">250dp</dimen>
+    <dimen name="release_date_text_size">12sp</dimen>
+    <dimen name="album_text_size">12sp</dimen>
+    <dimen name="margin_16dp">16dp</dimen>
 </resources>
