--- a/app/src/main/res/layout/fragment_lyric.xml
+++ b/app/src/main/res/layout/fragment_lyric.xml
@@ -38,6 +38,7 @@
             android:layout_margin="@dimen/margin_8dp"
             android:layout_marginTop="8dp"
             android:padding="@dimen/padding_4dp"
+            android:textColor="@color/white"
             android:textSize="@dimen/song_title_text_sie"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -50,8 +51,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_8dp"
-            android:padding="@dimen/padding_4dp"
             android:layout_marginBottom="@dimen/margin_8dp"
+            android:padding="@dimen/padding_4dp"
+            android:textColor="@color/white"
             android:textSize="@dimen/artist_name_text_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/albumCoverForLyricsImageView"
@@ -66,6 +68,7 @@
             android:layout_marginTop="@dimen/margin_16dp"
             android:padding="@dimen/padding_4dp"
             android:text="@string/album_title_label"
+            android:textColor="@color/white"
             android:textSize="@dimen/album_text_size"
             app:layout_constraintStart_toEndOf="@+id/albumCoverForLyricsImageView"
             app:layout_constraintTop_toBottomOf="@+id/artistNameTextView" />
@@ -76,6 +79,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_8dp"
             android:padding="@dimen/padding_8dp"
+            android:textColor="@color/white"
             android:textSize="@dimen/album_text_size"
             app:layout_constraintBottom_toBottomOf="@+id/albumTitleLabelTextView"
             app:layout_constraintEnd_toEndOf="parent"
@@ -90,6 +94,7 @@
             android:layout_margin="@dimen/margin_8dp"
             android:padding="@dimen/padding_4dp"
             android:text="@string/release_date_label"
+            android:textColor="@color/white"
             android:textSize="@dimen/release_date_text_size"
             app:layout_constraintStart_toEndOf="@+id/albumCoverForLyricsImageView"
             app:layout_constraintTop_toBottomOf="@+id/albumTitleTextView" />
@@ -99,6 +104,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="@dimen/padding_4dp"
+            android:textColor="@color/white"
             android:textSize="@dimen/release_date_text_size"
             app:layout_constraintBottom_toBottomOf="@+id/releaseDateLabelTextView"
             app:layout_constraintEnd_toEndOf="parent"
