--- a/app/src/main/res/values-night/dimens.xml
+++ b/app/src/main/res/values-night/dimens.xml
@@ -20,4 +20,5 @@
     <dimen name="release_date_text_size">12sp</dimen>
     <dimen name="album_text_size">12sp</dimen>
     <dimen name="margin_16dp">16dp</dimen>
+    <dimen name="view_divider_width">1dp</dimen>
 </resources>
