--- a/app/src/main/res/layout/item_main_search_result.xml
+++ b/app/src/main/res/layout/item_main_search_result.xml
@@ -8,7 +8,7 @@
     app:cardUseCompatPadding="true">
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         tools:context=".presentation.MainActivity">
