--- a/app/src/main/res/layout/fragment_artist_info.xml
+++ b/app/src/main/res/layout/fragment_artist_info.xml
@@ -139,7 +139,7 @@
             tools:listitem="@layout/item_album" />
 
         <ProgressBar
-            android:id="@+id/progressBarArtist"
+            android:id="@+id/progressBarArtistInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
