--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.SingItOut" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="ThemeSingItOut" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#8AF44336</item>
         <item name="colorPrimaryVariant">#8AF44336</item>
