--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="album_number">#5C000000</color>
     <color name="divider_color">#12000000</color>
+    <color name="velvet">#31324A</color>
+    <color name="nude">#D54A73</color>
+    <color name="pastel">#8C637B</color>
 </resources>
