--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -35,11 +35,12 @@
         android:id="@+id/lyricsHeaderTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
         android:padding="@dimen/padding_8dp"
         android:text="@string/related_lyrics_search_header"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/horizontalRV" />
+        app:layout_constraintTop_toBottomOf="@+id/artistRVMock" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerSearch"
@@ -52,6 +53,25 @@
         app:layout_constraintTop_toBottomOf="@+id/lyricsHeaderTextView"
         app:spanCount="2"
         tools:listitem="@layout/item_main_search_result" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/artistRVMock"
+        android:layout_width="200dp"
+        android:layout_height="150dp"
+        android:src="@drawable/music"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/artistHeaderTextView" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/lyricsRVMock"
+        android:layout_width="200dp"
+        android:layout_height="150dp"
+        android:src="@drawable/music"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lyricsHeaderTextView" />
 
     <ProgressBar
         android:id="@+id/progressBarSearch"
