add new drawable

--- a/app/src/main/res/layout-land/fragment_main.xml
+++ b/app/src/main/res/layout-land/fragment_main.xml
@@ -78,7 +78,7 @@
         android:id="@+id/artistRVMock"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/music"
+        android:src="@drawable/music_alpha"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/verticalGuideline"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,7 +88,7 @@
         android:id="@+id/lyricsRVMock"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/music"
+        android:src="@drawable/music_alpha"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/verticalGuideline"
