--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -58,7 +58,7 @@
         android:id="@+id/artistRVMock"
         android:layout_width="200dp"
         android:layout_height="150dp"
-        android:src="@drawable/music"
+        android:src="@drawable/music_alpha"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/artistHeaderTextView" />
@@ -67,7 +67,7 @@
         android:id="@+id/lyricsRVMock"
         android:layout_width="200dp"
         android:layout_height="150dp"
-        android:src="@drawable/music"
+        android:src="@drawable/music_alpha"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
