add alpha to item_album_track.xml

--- a/app/src/main/res/layout/item_album_track.xml
+++ b/app/src/main/res/layout/item_album_track.xml
@@ -21,7 +21,7 @@
             android:textAlignment="center"
             android:textSize="@dimen/item_album_track"
             android:textStyle="bold"
-            android:textColor="@color/album_number"
+            android:alpha="0.6"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="1" />
