--- a/app/src/main/res/layout/fragment_album_tracks.xml
+++ b/app/src/main/res/layout/fragment_album_tracks.xml
@@ -20,11 +20,12 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_8dp"
         android:padding="@dimen/padding_4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/albumCoverImageView"
-        app:layout_constraintTop_toTopOf="parent"
         android:textAlignment="center"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/titleHeaderTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/albumCoverImageView"
+        app:layout_constraintTop_toTopOf="@+id/albumCoverImageView"
         tools:text="Album title" />
 
     <TextView
