--- a/app/src/main/res/layout/fragment_artist_info.xml
+++ b/app/src/main/res/layout/fragment_artist_info.xml
@@ -126,6 +126,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/artistDescription" />
 
+        <include layout="@layout/shimmering_album_placeholder"
+            android:id="@+id/albumsPlaceholder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/albumsHeaderTextView"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/albumsRecyclerView"
             android:layout_width="match_parent"
